--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -70,3 +70,20 @@ const ogUrl = new URL(
     @apply my-8;
   }
 </style>
+
+<script src="https://giscus.app/client.js"
+        data-repo="liqingyou/astro-paper-1"
+        data-repo-id="R_kgDOKZTVww"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOKZTVw84CZ-Qr"
+        data-mapping="title"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
