--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -55,6 +55,8 @@ const ogUrl = new URL(
     <ul class="tags-container">
       {tags.map(tag => <Tag name={slugifyStr(tag)} />)}
     </ul>
+
+    <div classs="giscus"></div>
   </main>
   <Footer />
 </Layout>
