--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -6,6 +6,7 @@ import Tag from "@components/Tag.astro";
 import Datetime from "@components/Datetime";
 import type { CollectionEntry } from "astro:content";
 import { slugifyStr } from "@utils/slugify";
+import Comment from "@components/Comment.astro";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -56,7 +57,7 @@ const ogUrl = new URL(
       {tags.map(tag => <Tag name={slugifyStr(tag)} />)}
     </ul>
 
-    <div classs="giscus"></div>
+    <Comment />
   </main>
   <Footer />
 </Layout>
@@ -73,19 +74,4 @@ const ogUrl = new URL(
   }
 </style>
 
-<script src="https://giscus.app/client.js"
-        data-repo="liqingyou/astro-paper-1"
-        data-repo-id="R_kgDOKZTVww"
-        data-category="Announcements"
-        data-category-id="DIC_kwDOKZTVw84CZ-Qr"
-        data-mapping="title"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="preferred_color_scheme"
-        data-lang="zh-CN"
-        data-loading="lazy"
-        crossorigin="anonymous"
-        async>
-</script>
+
