--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<div class="giscus-container mx-auto px-6 sm:px-6 py-16 max-w-3xl text-muted dark:text-slate-400">
+<div class="giscus-container mx-auto max-w-3xl text-muted dark:text-slate-400">
     <script src="https://giscus.app/client.js"
         data-repo="liqingyou/astro-paper-1"
         data-repo-id="R_kgDOKZTVww"
